fix broken UI in mobile

--- a/src/views/checkout/style.scss
+++ b/src/views/checkout/style.scss
@@ -28,6 +28,7 @@
     }
     .note-style {
       font-style: italic;
+      font-size: 12px;
     }
   }
   &__action {
